add methods to rspec
